<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="email_text">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="password_text">Enter your password</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="sign_in_text">Sign In</string>
    <string name="welcome_message">Welcome to the Shoe Store!</string>
    <string name="sales_text">Take advantage of the sales that are going every day of the year!</string>
    <string name="button_continue_text">Continue</string>
    <string name="instructions_title">Buying shoes is simple!</string>
    <string name="instruction_one_text">Click the Add button in your list of shoes to add a new shoe</string>
    <string name="instruction_two_text">Hit Save to add your new shoe to your inventory!</string>
    <string name="button_goto_shoe_list_text">Go to Shoe List</string>
    <string name="no_shoes_found_text">No shoes found</string>
    <string name="fab_add_shoe_content_description">Add a shoe</string>
    <string name="shoe_name_value">Name</string>
    <string name="shoe_company_name_value">Company name</string>
    <string name="shoe_size_value">size</string>
    <string name="shoe_description_value">Description</string>
    <string name="button_cancel_shoe">cancel</string>
    <string name="button_save_shoe">save</string>
    <string name="shoe_name_label">Shoe Name</string>
    <string name="shoe_company_name_label">Shoe Company Name</string>
    <string name="shoe_size_label">Shoe Size</string>
    <string name="shoe_description_label">Shoe Description</string>
    <string name="shoe_detail_size_label">Size:</string>
    <string name="shoe_detail_name_label">Name:</string>
    <string name="shoe_detail_company_label">Company:</string>
    <string name="logout_title">Logout</string>
    <string name="shoe_name_error">Enter a valid shoe name</string>
    <string name="shoe_description_error">Enter a valid shoe description</string>
    <string name="shoe_company_error">Enter a valid shoe company</string>
    <string name="shoe_size_error">Enter a valid shoe size</string>
    <string name="instruction_three_text">It is that simple!</string>
</resources>
